Fix truncated help panel

--- a/content/options/options.css
+++ b/content/options/options.css
@@ -23,7 +23,7 @@
 }
 
 #gmanager-options {
-	height: 40em !important;
+	height: 42em !important;
 	width: 60em !important;
 }
 
